--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<g!DOCTYPE html>
+<g!DOCTYPE html></g>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,5 +19,5 @@
         </nav>
     </header>
 </body>
-
+assalamualaikum
 </html>
