--- a/index.html
+++ b/index.html
@@ -1,23 +1,152 @@
-<g!DOCTYPE html></g>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Website Kak Intan</title>
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Knowledge Base Terminal Teluk Lamong</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+    body {
+        margin: 0;
+        font-family: "Poppins", sans-serif;
+        background: #f5faff;
+        overflow-x: hidden;
+    }
+
+    .navbar {
+        width: 100%;
+        padding: 18px 45px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        z-index: 10;
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(10px);
+        box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+    }
+
+    .nav-links {
+        margin-right: 70px;
+    }
+
+    .nav-links a {
+        margin-left: 25px;
+        text-decoration: none;
+        font-size: 17px;
+        font-weight: 600;
+        color: #222;
+        transition: 0.3s;
+    }
+
+    .nav-links a:hover {
+        color: #0077cc;
+    }
+
+    .header-title {
+        margin-top: 130px;
+        text-align: center;
+    }
+
+    .header-title h1 {
+        font-size: 34px;
+        font-weight: 700;
+    }
+
+    .header-title h2 {
+        color: #5b5b5b;
+        font-size: 20px;
+    }
+
+    .content {
+        width: 80%;
+        margin: 50px auto 100px;
+        display: flex;
+        justify-content: center;
+        gap: 50px;
+    }
+
+    .image-box {
+        width: 380px;
+        height: 250px;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: 0 7px 18px rgba(0,0,0,0.12);
+        background: #ffffff;
+    }
+
+    .image-box img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; 
+        display: block;
+    }
+
+    .text-box {
+        max-width: 600px;
+    }
+
+    .text-box h3 {
+        font-size: 30px;
+        margin-bottom: 20px;
+        font-weight: 600;
+    }
+
+    .text-box p {
+        line-height: 1.8;
+        font-size: 17px;
+        color: #333;
+        margin-bottom: 16px;
+    }
+
+    @media (max-width: 900px) {
+        .content { flex-direction: column; text-align: center; }
+        .image-box { margin: 0 auto; }
+    }
+</style>
+
+</head>
 <body>
 
-    <header class="header">
-        <a href="#" class="logo">Kanz.</a>
+<div class="navbar">
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="knowledge-base.html">Knowledge Base</a>
+    </div>
+</div>
 
-        <nav class="navbar">
-            <a href="index.html" class="active">Home</a>
-            <a href="Knowlegde Base.html">About</a>
-        </nav>
-    </header>
+<div class="header-title">
+    <h1><i>Knowledge Base</i> Aktivitas dan Risiko Operasional</h1>
+    <h2>PELINDO Terminal Petikemas Teluk Lamong</h2>
+</div>
+
+<div class="content">
+
+    <div class="image-box">
+        <img src="terminal.jpg" alt="Gambar Terminal Teluk Lamong">
+    </div>
+
+    <div class="text-box">
+        <h3>Terminal Teluk Lamong</h3>
+        <p>
+            Terminal Teluk Lamong adalah terminal multiguna modern yang berada di antara 
+            Pelabuhan Gresik dan Pelabuhan Tanjung Perak. Sejak berdiri pada 2013, kami 
+            terus berkembang melalui lima fase hingga menuju visi menjadi terminal kelas 
+            dunia pada 2030.
+        </p>
+        <p>
+            Dengan layanan cepat, aman, dan ramah lingkungan, Terminal Teluk Lamong kini 
+            menjadi penggerak utama distribusi barang ke dan dari Indonesia bagian timur. 
+            Kami berkomitmen menghadirkan pelayanan terbaik untuk memperkuat posisi 
+            Indonesia sebagai poros maritim dunia.
+        </p>
+    </div>
+
+</div>
+
 </body>
-
 </html>
+
