--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Knowledge Base Terminal Teluk Lamong</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Knowledge Base Terminal Teluk Lamong</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-<style>
-    body {
+    <style>
+      body {
         margin: 0;
         font-family: "Poppins", sans-serif;
         background: #f5faff;
         overflow-x: hidden;
-    }
+      }
 
-    .navbar {
+      .navbar {
         width: 100%;
         padding: 18px 45px;
         display: flex;
@@ -26,127 +29,126 @@
         z-index: 10;
         background: rgba(255, 255, 255, 0.85);
         backdrop-filter: blur(10px);
-        box-shadow: 0 3px 12px rgba(0,0,0,0.05);
-    }
+        box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
+      }
 
-    .nav-links {
+      .nav-links {
         margin-right: 70px;
-    }
+      }
 
-    .nav-links a {
+      .nav-links a {
         margin-left: 25px;
         text-decoration: none;
         font-size: 17px;
         font-weight: 600;
         color: #222;
         transition: 0.3s;
-    }
+      }
 
-    .nav-links a:hover {
+      .nav-links a:hover {
         color: #0077cc;
-    }
+      }
 
-    .header-title {
+      .header-title {
         margin-top: 130px;
         text-align: center;
-    }
+      }
 
-    .header-title h1 {
+      .header-title h1 {
         font-size: 34px;
         font-weight: 700;
-    }
+      }
 
-    .header-title h2 {
+      .header-title h2 {
         color: #5b5b5b;
         font-size: 20px;
-    }
+      }
 
-    .content {
+      .content {
         width: 80%;
         margin: 50px auto 100px;
         display: flex;
         justify-content: center;
         gap: 50px;
-    }
+      }
 
-    .image-box {
+      .image-box {
         width: 380px;
         height: 250px;
         border-radius: 15px;
         overflow: hidden;
-        box-shadow: 0 7px 18px rgba(0,0,0,0.12);
+        box-shadow: 0 7px 18px rgba(0, 0, 0, 0.12);
         background: #ffffff;
-    }
+      }
 
-    .image-box img {
+      .image-box img {
         width: 100%;
         height: 100%;
-        object-fit: cover; 
+        object-fit: cover;
         display: block;
-    }
+      }
 
-    .text-box {
+      .text-box {
         max-width: 600px;
-    }
+      }
 
-    .text-box h3 {
+      .text-box h3 {
         font-size: 30px;
         margin-bottom: 20px;
         font-weight: 600;
-    }
+      }
 
-    .text-box p {
+      .text-box p {
         line-height: 1.8;
         font-size: 17px;
         color: #333;
         margin-bottom: 16px;
-    }
+      }
 
-    @media (max-width: 900px) {
-        .content { flex-direction: column; text-align: center; }
-        .image-box { margin: 0 auto; }
-    }
-</style>
-
-</head>
-<body>
-
-<div class="navbar">
-    <div class="nav-links">
+      @media (max-width: 900px) {
+        .content {
+          flex-direction: column;
+          text-align: center;
+        }
+        .image-box {
+          margin: 0 auto;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="navbar">
+      <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="knowledge-base.html">Knowledge Base</a>
-    </div>
-</div>
-
-<div class="header-title">
-    <h1><i>Knowledge Base</i> Aktivitas dan Risiko Operasional</h1>
-    <h2>PELINDO Terminal Petikemas Teluk Lamong</h2>
-</div>
-
-<div class="content">
-
-    <div class="image-box">
-        <img src="terminal.jpg" alt="Gambar Terminal Teluk Lamong">
+      </div>
     </div>
 
-    <div class="text-box">
+    <div class="header-title">
+      <h1><i>Knowledge Base</i> Aktivitas dan Risiko Operasional</h1>
+      <h2>PELINDO Terminal Petikemas Teluk Lamong</h2>
+    </div>
+
+    <div class="content">
+      <div class="image-box">
+        <img src="terminal.jpg" alt="Gambar Terminal Teluk Lamong" />
+      </div>
+
+      <div class="text-box">
         <h3>Terminal Teluk Lamong</h3>
         <p>
-            Terminal Teluk Lamong adalah terminal multiguna modern yang berada di antara 
-            Pelabuhan Gresik dan Pelabuhan Tanjung Perak. Sejak berdiri pada 2013, kami 
-            terus berkembang melalui lima fase hingga menuju visi menjadi terminal kelas 
-            dunia pada 2030.
+          Terminal Teluk Lamong adalah terminal multiguna modern yang berada di
+          antara Pelabuhan Gresik dan Pelabuhan Tanjung Perak. Sejak berdiri
+          pada 2013, kami terus berkembang melalui lima fase hingga menuju visi
+          menjadi terminal kelas dunia pada 2030.
         </p>
         <p>
-            Dengan layanan cepat, aman, dan ramah lingkungan, Terminal Teluk Lamong kini 
-            menjadi penggerak utama distribusi barang ke dan dari Indonesia bagian timur. 
-            Kami berkomitmen menghadirkan pelayanan terbaik untuk memperkuat posisi 
-            Indonesia sebagai poros maritim dunia.
+          Dengan layanan cepat, aman, dan ramah lingkungan, Terminal Teluk
+          Lamong kini menjadi penggerak utama distribusi barang ke dan dari
+          Indonesia bagian timur. Kami berkomitmen menghadirkan pelayanan
+          terbaik untuk memperkuat posisi Indonesia sebagai poros maritim dunia.
         </p>
+      </div>
     </div>
-
-</div>
-
-</body>
+  </body>
 </html>
-
