--- a/aktivitas3.html
+++ b/aktivitas3.html
@@ -230,40 +230,58 @@
       <!-- KOLOM KIRI: ADMINISTRASI 1 -->
       <!-- ========================== -->
       <div class="column">
-        <div class="column-title">Aktivitas Administrasi 1</div>
+        <div class="column-title">Aktivitas Administrasi 3</div>
 
         <div class="tree">
           <ul>
             <li>
               <div
                 class="node purple"
-                onclick="showModal('Aktivitas Administrasi 1','Menerbitkan Berth Plan terkonfirmasi (posisi & waktu sandar dengan alokasi crane)')"
+                onclick="showModal('Aktivitas Administrasi 3','Mempublikasikan Bay Plan + Crane Work Plan (CWP) di TOS.')"
               >
-                AA 1
+                AA 3
               </div>
               <ul>
                 <li>
                   <div
                     class="node yellow"
-                    onclick="showModal('Risk 2','Ketidaksesuaian alokasi crane & kapasitas fasilitas')"
+                    onclick="showModal('Risk 5','Data stowage keliru/kurang lengkap saat dipublikasikan (BAPLIE & VGM)')"
                   >
-                    R 2
+                    R 5
                   </div>
                   <ul>
                     <li>
                       <div
                         class="node red"
-                        onclick="showModal('Cause 2','Ketersediaan crane/fasilitas tidak real-time (breakdown/maintenance, overlap rel/jangkauan, batas daya)')"
+                        onclick="showModal('Cause 8','Versi file tidak sinkron (publish BAPLIE lama/terbaru tidak tersebar)')"
                       >
-                        C 2
+                        C 8
                       </div>
                       <ul>
                         <li>
                           <div
                             class="node green"
-                            onclick="showModal('Preventive Measure 2','Integrasikan CMMS + condition monitoring (acu ISO 12482) ke TOS agar status alat (operational/out-of-service) real-time; lengkapi fitur keselamatan minimum (anemometer, tie-down, anti-collision) untuk mengurangi downtime karena cuaca/gangguan.')"
+                            onclick="showModal('PM 8','Terapkan kontrol versi & acknowledgement EDI (gunakan APERAK/CONTRL) agar hanya versi terbaru yang dipakai.')"
                           >
-                            PM 2
+                            PM 8
+                          </div>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <div
+                        class="node red"
+                        onclick="showModal('Cause 9','Kualitas data buruk: salah bay/row/tier, size/type, atau VGM belum/salah')"
+                      >
+                        C 9
+                      </div>
+                      <ul>
+                        <li>
+                          <div
+                            class="node green"
+                            onclick="showModal('PM 9','Aktifkan rule-based validation (bay/row/tier/type) dan cek VGM sesuai SOLAS-VGM sebelum publish.')"
+                          >
+                            PM 9
                           </div>
                         </li>
                       </ul>
@@ -274,25 +292,25 @@
                 <li>
                   <div
                     class="node yellow"
-                    onclick="showModal('Risk 1','Ketidakakuratan jadwal & posisi sandar (Berth mis-allocation)')"
+                    onclick="showModal('Risk 6','Interferensi antar quay crane karena CWP tidak optimal')"
                   >
-                    R 1
+                    R 6
                   </div>
                   <ul>
                     <li>
                       <div
                         class="node red"
-                        onclick="showModal('Cause 1','ETA/ETD kapal tidak akurat/tidak real-time (cuaca, antrian, pilotage)')"
+                        onclick="showModal('Cause 10','Range kerja crane overlap (aturan non-crossing/jarak aman tidak diterapkan)')"
                       >
-                        C 1
+                        C 10
                       </div>
                       <ul>
                         <li>
                           <div
                             class="node green"
-                            onclick="showModal('Preventive Measure 1','Terapkan Just-in-Time (JIT) Port Call: kewajiban update ETA/ETD berkala via Inaportnet dan berbagi memakai data standar IMO FAL.5/Circ.52, terhubung ke VTS/pandu')"
+                            onclick="showModal('Preventive Measure 10','Terapkan penjadwalan QCSP di TOS dengan kendala non-crossing & safety distance + validasi CWP sebelum publish')"
                           >
-                            PM 1
+                            PM 10
                           </div>
                         </li>
                       </ul>
@@ -309,40 +327,40 @@
       <!-- KOLOM KANAN: PEMERIKSAAN 1 -->
       <!-- ========================== -->
       <div class="column">
-        <div class="column-title">Aktivitas Pemeriksaan 1</div>
+        <div class="column-title">Aktivitas Pemeriksaan 3</div>
 
         <div class="tree">
           <ul>
             <li>
               <div
                 class="node purple"
-                onclick="showModal('Aktivitas Pemeriksaan 1','Verifikasi Vessel Schedule & Alokasi Dermaga pada BA Map sebelum sandar.')"
+                onclick="showModal('Aktivitas Pemeriksaan 3','Verifikasi data rencana di TOS (cek data/ship particular) serta rencana Bay Plan/CWP sebelum dibagikan')"
               >
-                AP 1
+                AP 3
               </div>
               <ul>
                 <li>
                   <div
                     class="node yellow"
-                    onclick="showModal('Risk 2','Ketidakcocokan kapal–dermaga')"
+                    onclick="showModal('Risk 6','Data salah/tidak lengkap di TOS (manifest, ukuran/tipe kontainer, VGM, data kapal)')"
                   >
-                    R 2
+                    R 6
                   </div>
                   <ul>
                     <li>
                       <div
                         class="node red"
-                        onclick="showModal('Cause 4','Informasi kondisi dermaga & peralatan tidak akurat (kedalaman aktual, crane outage/jangkauan, batasan struktur)')"
+                        onclick="showModal('Cause 11','Kesalahan input/manual mapping (ISO size/type, reefer/DG flag, container ID) atau VGM belum masuk saat cut-off')"
                       >
-                        C 4
+                        C 11
                       </div>
                       <ul>
                         <li>
                           <div
                             class="node green"
-                            onclick="showModal('PM 4','Update harian “berth capacity matrix” (kedalaman aktual & status crane) terhubung ke BA Map dengan aturan no-allocate jika tidak memenuhi batas')"
+                            onclick="showModal('PM 1','Hard-validation di TOS (ISO size/type & DG/reefer wajib benar; VGM wajib ada—kalau tidak, blok rencana)')"
                           >
-                            PM 4
+                            PM 11
                           </div>
                         </li>
                       </ul>
@@ -350,17 +368,17 @@
                     <li>
                       <div
                         class="node red"
-                        onclick="showModal('Cause 3','Data teknis kapal tidak lengkap/terbaru (LOA, beam, draft, kebutuhan crane, special cargo) saat verifikasi')"
+                        onclick="showModal('Cause 12','Profil kapal (bay/vessel particulars) tidak mutakhir di library TOS sehingga penomoran slot/kapasitas tidak cocok')"
                       >
-                        C 3
+                        C 12
                       </div>
                       <ul>
                         <li>
                           <div
                             class="node green"
-                            onclick="showModal('PM 3','Wajibkan pre-berthing ship particulars checklist H-24/H-12 dan aktifkan “hard-validation” di TOS (LOA/beam/draft/kebutuhan crane harus valid sebelum alokasi diproses)')"
+                            onclick="showModal('PM 12','Governansi master data kapal (update saat first call & sign-off oleh shipping line; versi dikunci sebelum planning)')"
                           >
-                            PM 3
+                            PM 12
                           </div>
                         </li>
                       </ul>
@@ -371,25 +389,25 @@
                 <li>
                   <div
                     class="node yellow"
-                    onclick="showModal('Risk 1','Konflik jadwal/berth conflict (double-booking)')"
+                    onclick="showModal('Risk 7','Bay Plan melanggar aturan keselamatan (stabilitas, batas tumpuk/lashing, dan segregasi Dangerous Goods)')"
                   >
-                    R 1
+                    R 7
                   </div>
                   <ul>
                     <li>
                       <div
                         class="node red"
-                        onclick="showModal('Cause 2','Durasi operasi kapal sebelumnya meleset (overrun karena produktivitas turun), sehingga window bertumpuk')"
+                        onclick="showModal('Cause 13','Deklarasi Dangerous Goods/segregation code tidak lengkap/salah, atau reefer/OOG tidak ditandai')"
                       >
-                        C 2
+                        C 13
                       </div>
                       <ul>
                         <li>
                           <div
                             class="node green"
-                            onclick="showModal('PM 2','Tambahkan buffer time antar kapal berbasis histori produktivitas/tidal window pada penetapan window sandar')"
+                            onclick="showModal('PM 13','TIMDG rule engine di TOS (tag DG/reefer/OOG wajib; rencana otomatis block jika tidak sesuai segregasi)')"
                           >
-                            PM 2
+                            PM 13
                           </div>
                         </li>
                       </ul>
@@ -397,17 +415,17 @@
                     <li>
                       <div
                         class="node red"
-                        onclick="showModal('Cause 1','Update ETA/ETB terlambat atau tidak sinkron antar sistem (TOS/BA Map–Inaportnet–shipping line/agent).')"
+                        onclick="showModal('Cause 14','Batasan stabilitas/trim/GM dari Chief Officer tidak diterapkan dalam rule TOS saat menyusun rencana')"
                       >
-                        C 1
+                        C 14
                       </div>
                       <ul>
                         <li>
                           <div
                             class="node green"
-                            onclick="showModal('PM 1','Aktifkan sinkronisasi otomatis + alert deviasi ETA/ETB (≥15–30 menit) antara TOS/BA Map–Inaportnet–shipping line')"
+                            onclick="showModal('PM 14','Wajib loadicator check & CO approval sebelum rilis Bay Plan/CWP (rencana tidak bisa dieksekusi sebelum lolos)')"
                           >
-                            PM 1
+                            PM 14
                           </div>
                         </li>
                       </ul>
